Implementa fonte sans-serif como padrão do projeto

--- a/jhuan-portifolio/src/styles/Content.css
+++ b/jhuan-portifolio/src/styles/Content.css
@@ -1,9 +1,11 @@
 .container-margin {
     margin-top: calc(100vh - 400px);
+    font-family: sans-serif;
 }
 
 .nav-bar.collapsed+.container-margin {
     margin-top: calc(100vh - 400px);
+    font-family: sans-serif;
 }
 
 @media (max-width: 768px) {
