--- a/jhuan-portifolio/src/App.css
+++ b/jhuan-portifolio/src/App.css
@@ -1,22 +1,6 @@
  body {
- }
-
- .color1 {
-     color: #ffab6b;
- }
-
- .color2 {
-     color: #fff348;
- }
-
- .color3 {
-     color: #311302;
- }
-
- .color4 {
-     color: #7d7673;
- }
-
- .color5 {
-     color: #e2e2e2;
+     height: 100%;
+     width: 100%;
+     background: linear-gradient(#e2e2e2, #7d7673);
+     background-size: cover;
  }
