Implementa cores de fundo para background das paginas

--- a/jhuan-portifolio/src/App.css
+++ b/jhuan-portifolio/src/App.css
@@ -1,6 +1,6 @@
  body {
      height: 100%;
      width: 100%;
-     background: linear-gradient(#e2e2e2, #7d7673);
+     background-color: #b7b7b7e5;
      background-size: cover;
  }
