Ajusta cor de fundo da página e cor da barra de navegação

--- a/jhuan-portifolio/src/App.css
+++ b/jhuan-portifolio/src/App.css
@@ -1,6 +1,6 @@
  body {
      height: 100%;
      width: 100%;
-     background-color: #b7b7b7e5;
+     background-color: #fcf7f7;
      background-size: cover;
  }
